[tool.poetry]
name = "emtk"
version = "0.5.0"
description = "Extended Modifiers Tool Kit"
authors = ["0djentd"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/0djentd/emtk"
repository = "https://github.com/0djentd/emtk"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
